--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>WebStudio</title>
 
   <!-- Google Fonts links -->
@@ -24,7 +27,14 @@
   <header class="header">
     <div class="container">
       <nav class="header__nav">
+
         <a href="./index.html" class="logo"><span class="logo--blue">Web</span>Studio</a>
+        <!-- Mobile menu button -->
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu"><svg
+            class="menu-button" height="40" width="40">
+            <use href="./images/icons.svg#icon-hamburger"></use>
+          </svg></button>
+          
         <ul class="header__links">
           <li><a href="./index.html"
               class="header__socials header__links--nav-blue header__links--is-active">Agencja</a></li>
@@ -67,7 +77,7 @@
       <div class="container">
         <h2 class="visually-hidden">Nasze atuty</h2>
         <ul class="paragraphs__list">
-          <li>
+          <li class="paragraphs__item">
             <div class="paragraphs__icon-box">
               <svg class="paragraphs__icon" width="70px" height="70px">
                 <use href="images/icons.svg#icon-antenna-1"></use>
@@ -79,7 +89,7 @@
               doloribus libero reiciendis iste omnis quod odit accusantium cum?
             </p>
           </li>
-          <li>
+          <li class="paragraphs__item">
             <div class="paragraphs__icon-box">
               <svg class="paragraphs__icon" width="70px" height="70px">
                 <use href="images/icons.svg#icon-clock-1"></use>
@@ -91,7 +101,7 @@
               doloribus libero reiciendis iste omnis quod odit accusantium cum?
             </p>
           </li>
-          <li>
+          <li class="paragraphs__item">
             <div class="paragraphs__icon-box">
               <svg class="paragraphs__icon" width="70px" height="70px">
                 <use href="images/icons.svg#icon-diagram-1"></use>
@@ -103,7 +113,7 @@
               doloribus libero reiciendis iste omnis quod odit accusantium cum?
             </p>
           </li>
-          <li>
+          <li class="paragraphs__item">
             <div class="paragraphs__icon-box">
               <svg class="paragraphs__icon" width="70px" height="70px">
                 <use href="images/icons.svg#icon-astronaut-1"></use>
@@ -121,10 +131,10 @@
     <!-- End paragraphs section -->
 
     <!-- 'What we do' section -->
-    <section class="section">
+    <section class="section what-we-do">
       <div class="container">
         <h2 class="secondary-header">Czym się zajmujemy?</h2>
-        <ul class="what-we-do">
+        <ul class="what-we-do__list">
           <li>
             <div class="what-we-do__overlay">
               <img src="images/keyboard.jpg" alt="Keyboard" width="370" />
@@ -153,7 +163,10 @@
         <h2 class="secondary-header">Nasz zespół</h2>
         <ul class="team__list">
           <li class="team__card">
-            <img src="images/productdesigner.jpg" alt="Product designer" width="270" />
+            <img alt="Product designer" src="images/productdesigner.jpg"
+              srcset="images/productdesigner@2x.jpg 2x, images/productdesigner@3x.jpg 3x"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+              min-width="270" />
             <div class="team__box">
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">Product designer</p>
@@ -190,7 +203,10 @@
             </div>
           </li>
           <li class="team__card">
-            <img src="images/frontenddeveloper.jpg" alt="Frontend developer" width="270" />
+            <img alt="Frontend developer" src="images/frontenddeveloper.jpg"
+              srcset="images/frontenddeveloper@2x.jpg 2x, images/frontenddeveloper@3x.jpg 3x"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+              min-width="270" />
             <div class="team__box">
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">Frontend developer</p>
@@ -227,7 +243,10 @@
             </div>
           </li>
           <li class="team__card">
-            <img src="images/marketing.jpg" alt="Marketing" width="270" />
+            <img alt="UI designerMarketing" src="images/marketing.jpg"
+              srcset="images/marketing@2x.jpg 2x, images/marketing@3x.jpg 3x"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+              min-width="270" />
             <div class="team__box">
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">Marketing</p>
@@ -264,7 +283,10 @@
             </div>
           </li>
           <li class="team__card">
-            <img src="images/uidesigner.jpg" alt="UI designer" width="270" />
+            <img alt="UI designer" src="images/uidesigner.jpg"
+              srcset="images/uidesigner@2x.jpg 2x, images/uidesigner@3x.jpg 3x"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+              min-width="270" />
             <div class="team__box">
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">UI designer</p>
@@ -345,7 +367,7 @@
   <footer class="footer">
     <!-- Footer -->
     <div class="container">
-      <div>
+      <div class="footer__container">
         <a href="index.html" class="logo footer-logo"><span class="logo--blue">Web</span><span
             class="logo--white">Studio</span></a>
         <address>
@@ -404,6 +426,36 @@
     </div>
     <!-- End footer -->
   </footer>
+
+  <!-- Mobile menu -->
+  <div class="menu js-menu-container is-open" id="mobile-menu">
+    <div class="menu__window"><button class="menu__exit js-close-menu">
+        <svg class="menu__close-icon" height="18" width="18">
+          <use href="./images/icons.svg#icon-exit-cross"></use>
+        </svg>
+      </button>
+      <ul class="menu__nav">
+        <li><a href="./index.html" class="menu__link">Agencja</a></li>
+        <li><a href="./portfolio.html" class="menu__link">Portfolio</a></li>
+        <li><a href="#" class="menu__link">Kontakt</a></li>
+      </ul>
+      <ul class="menu__contacts">
+        <li><a href="tel:+48111111111" class="menu__contacts-link">+48 111 111 111</a></li>
+        <li><a href="mailto:info@devstudio.com" class="menu__contacts-link--mail">info@devstudio.com</a></li>
+      </ul>
+      <ul class="menu__socials">
+        <li><a class="menu__social-link" href="#">Instagram</a></li>
+        <li><a class="menu__social-link" href="#">Twitter</a></li>
+        <li><a class="menu__social-link" href="#">Facebook</a></li>
+        <li><a class="menu__social-link" href="#">Linkedin</a></li>
+      </ul>
+    </div>
+  </div>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+  <script defer src="js/mobile-menu.js"></script>
+
   <!-- Modal -->
   <div class="modal is-hidden" data-modal="">
     <div class="modal__window">
@@ -459,7 +511,6 @@
       </div>
     </div>
   </div>
-
   <script src="./js/modal.js"></script>
 
 </body>
