--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <h2 class="secondary-header">Nasz zespół</h2>
         <ul class="team__list">
           <li class="team__card">
-            <img  class="photo" alt="Product designer" src="images/productdesigner.jpg"
+            <img  class="photo" alt="Product designer" src="./images/productdesigner.jpg"
               srcset="images/productdesigner@2x.jpg 2x, images/productdesigner@3x.jpg 3x"
               sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw" min-width="270" />
             <div class="team__box">
