--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
         <h2 class="secondary-header">Nasz zespół</h2>
         <ul class="team__list">
           <li class="team__card">
-            <img alt="Frontend developer" src="images/productdesigner.jpg"
-              srcset="images/productdesigner2x.jpg 2x, images/productdesignerx.jpg 3x"
+            <img class="photo" alt="Product designer" src="images/productdesigner.jpg"
+              srcset="images/productdesigner@2x.jpg 2x, images/productdesigner@3x.jpg 3x"
               sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw" min-width="270" />
             <div class="team__box">
               <h3 class="team__name">John Doe</h3>
-              <p class="team__profession">Frontend developer</p>
+              <p class="team__profession">Product designer</p>
               <ul class="team__socials">
                 <li class="team__socials-item">
                   <a href="#" class="team__social-link">
