Mobile menu fixes

--- a/index.html
+++ b/index.html
@@ -443,10 +443,10 @@
         <li><a href="mailto:info@devstudio.com" class="menu__contacts-link--mail">info@devstudio.com</a></li>
       </ul>
       <ul class="menu__socials">
-        <li><a class="menu__social-link" href="#">Instagram</a></li>
-        <li><a class="menu__social-link" href="#">Twitter</a></li>
-        <li><a class="menu__social-link" href="#">Facebook</a></li>
-        <li><a class="menu__social-link" href="#">Linkedin</a></li>
+        <li class="menu__socials-item"><a class="menu__social-link" href="#">Instagram</a></li>
+        <li class="menu__socials-item"><a class="menu__social-link" href="#">Twitter</a></li>
+        <li class="menu__socials-item"><a class="menu__social-link" href="#">Facebook</a></li>
+        <li class="menu__socials-item"><a class="menu__social-link" href="#">Linkedin</a></li>
       </ul>
     </div>
   </div>
